--- a/programs/WHoleSpecie_Jannetworks.Rmd
+++ b/programs/WHoleSpecie_Jannetworks.Rmd
@@ -26,6 +26,7 @@ library(gridExtra)
 #devtools::install_github("kevinblighe/CorLevelPlot")
 library(CorLevelPlot)
 library(ggpubr)
+library(plotly)
 ```
 
 ## Load the data
@@ -33,15 +34,11 @@ library(ggpubr)
 Import the csv and metadata files
 
 ```{r dtLoad}
-#"B73"   "DK105" "EP1"   "F7"    "PE75" 
-specie<-""
-dataPath<-paste0("../data/wlen/data_wlen", specie, ".csv")
-metadataPath<-paste0("../data/metadata", specie, ".txt")
+dataPath<-paste0("../data/wlen/data_wlen.csv")
+metadataPath<-paste0("../data/metadata.txt")
 
 dataNL<-read.delim(dataPath, row.names=1, stringsAsFactors=TRUE)
 metadata<-read.delim(metadataPath, header=T, row.names=1, stringsAsFactors=TRUE)
-#dataNL<-read.delim("../data/data_nolen.csv", row.names=1, stringsAsFactors=TRUE)
-#metadata<-read.delim("../data/metadata.txt", header=T, row.names=1, stringsAsFactors=TRUE)
 
 colnames(metadata)<-c("specie", "quality", "tissue_abv", "rep", "location")
 ```
@@ -50,13 +47,13 @@ colnames(metadata)<-c("specie", "quality", "tissue_abv", "rep", "location")
 
 ## Get lengths vector
 
+If the provided data contains the length of the genes, extract them to a vector
+
 ```{r getLen}
 if ("Length" %in% colnames(dataNL)){
   length_vec<-dataNL$Length
 }
 ```
-
-
 
 ## Fix the data
 
@@ -69,7 +66,7 @@ dim(metadata)
 
 ### Match metadata rows to data columns
 
-Just in case lets match the samples
+Match which samples appear in the data and metadata
 
 ```{r dataMatch}
 dataMatcher<-function(data, metadata){
@@ -108,17 +105,17 @@ metadata<-jointData[[2]]
 #Should be all 0 due to preprocessing filtering
 levels(as.factor(metadata$quality))
 
-#Mapped abreviations
+#Mapped abbreviations
 levels(metadata$tissue_abv)
 
 #reps 1,2,3 and 4, is there an imbalance?
 table(metadata$rep)
 
 levels(metadata$location)
-#Different rep aoumts indicate different amount of each replicate
+#Different total amounts of each tissue replicate would indicate that one of the species does not present the same amount copies
 table(metadata$location) 
 #there are different total numbers of tissue replicates
-#Solve it by using 1 replicate per tissue (mean of exisitng replicates)
+#Solve it by using 1 replicate per tissue (mean of existing replicates)
 
 ```
 ### Outlier check
@@ -155,13 +152,13 @@ metadata$location<-as.factor(metadata$location)
 ```
 
 ```{r replJoin}
-rsumer<-function(data, metadata, tissue_name){ #calculates the mean of all columns that belong to a location (mean of all COB columns)
+rsumer<-function(data, metadata, tissue_name){ #calculates the mean of all columns that belong to a location (ex: mean of all COB columns)
   
   loc_mdata<-metadata[metadata$location == tissue_name, ] #filter metadata tissue (get metadata of location only)
   
-  data<-data[,colnames(data) %in% rownames(loc_mdata)] #get data of lcoation only, based on metadata
+  data<-data[,colnames(data) %in% rownames(loc_mdata)] #get data of location only, based on metadata
   
-  if (1<ncol(data.frame(data))){ #If theres only 1 replicate, dont try to do the mean (it gives error)
+  if (1<ncol(data.frame(data))){ #If there's only 1 replicate, don't try to do the mean (it gives error)
     data<-rowMeans(data) #calculate mean for each gene out of the locations(replicates)
   }
   
@@ -182,9 +179,11 @@ rownames(repl_data)<-rownames(dataNL) #rename rows to be genes again
 
 Create replicate metadata
 ```{r replMeta}
+#Create a column for the location+species
 repl_meta<-as.data.frame(colnames(repl_data))
 colnames(repl_meta)<-c("location")
 
+#Split the created column and add 2 columns to repl_meta, one for the species and one for the tissue
 temp_meta<-data.frame(t(data.frame(strsplit(as.character(repl_meta$location), "_"))))
 repl_meta<-data.frame(repl_meta$location, temp_meta$X1, temp_meta$X2)
 colnames(repl_meta)<-c("location", "species", "org_location")
@@ -204,14 +203,15 @@ multiColHist<-function(data, location, color_var){ #gets the data table, the con
   return(p)
 }
 
-nn<-seq(1,149, by=15)
+#Create a vector to select 2 examples of each line
+repl_selection<-seq(1,ncol(repl_data), by=round(ncol(repl_data)/10))
 
-colorList<-distinctColorPalette(length(nn)) #make a list with a color for each tissue
+colorList<-distinctColorPalette(length(repl_selection)) #make a list with a color for each tissue
 
 #Create a legend that realates each color to a tissue
 
 #use the repl_meta dataframe for creating the plot, as it contains all tissue(location) names
-legend_plot<-ggplot(repl_meta[nn,], aes(x=1, y=location, color=location))+
+legend_plot<-ggplot(repl_meta[repl_selection,], aes(x=1, y=location, color=location))+
   geom_point()+
   scale_color_manual(values=colorList)+
   guides(color=guide_legend(ncol=1))+
@@ -226,7 +226,7 @@ Create the plot list
 ```{r rawPlotListing}
 RawHistList<-list() #to store the plots
 
-for (i in 1:nrow(repl_meta[nn,])){
+for (i in 1:nrow(repl_meta[repl_selection,])){
   color_var<-colorList[i]
   loc<-colnames(repl_data)[i]
   
@@ -237,11 +237,11 @@ for (i in 1:nrow(repl_meta[nn,])){
 
 Joins the plot and legend to create a plot of the total raw data distribution
 ```{r rawPlot}
-plotTitle<-paste0(specie, " raw data distribution")
+plotTitle<-paste0("Raw data distribution")
 
-raw_Ptab<-arrangeGrob(grobs=RawHistList, ncol=ceiling(nrow(repl_meta[nn,])/6)) #creates a table that organizes the plots
+raw_Ptab<-arrangeGrob(grobs=RawHistList, ncol=ceiling(nrow(repl_meta[repl_selection,])/6)) #creates a table that organizes the plots
 
-#png(paste0("./DistrPlots/", specie, "_raw_distPlot.png"), width=1600, height=800) #B73_CPM_raw_distPlot
+#png("./DistrPlots/Raw_distPlot.png", width=1600, height=800) #Raw_distPlot.png
 grid.arrange(raw_Ptab, legend_var, widths = c(10, 2.3), ncol=2, top=textGrob(plotTitle, gp=gpar(fontsize=20))) #plots the plot list and legend together
 #dev.off()
 ```
@@ -253,15 +253,13 @@ We can't use VST methods as we have 1 replicate of each type, it would be unreli
 ### CPM
 
 ```{r CPMnorm}
-#@@ remove lowly expressed genes
-#uses edgeR
-dge <- DGEList(repl_data)
+#edgeR object
+dge<-DGEList(repl_data)
 
 #Calculate normalization factors
-dge <- calcNormFactors(dge)
-
+dge<-calcNormFactors(dge)
 #Get normalized counts
-Nrepl_data <- cpm(dge, log=TRUE) #rpkm with lengths, testo other normalizations too
+Nrepl_data<-cpm(dge, log=TRUE)
 
 NormType<-"CPM"
 ```
@@ -270,35 +268,20 @@ NormType<-"CPM"
 
 ```{r CPMlExpRm}
 #Filter low expression genes
-#keep<-rowSums(Nrepl_data>1)>=12 #as most lowly expressed genes are slightly above 0(=1), so we filter starting at 1 rep and more than 10 total in samples
-keep<-rowSums(Nrepl_data>=0)>=0 #@@ only >=0 erases bell curve
-keep<-apply(Nrepl_data, 1, max)>=0
+keep<-apply(Nrepl_data, 1, max)>=0 #keep genes where the counts for at least one replicate are of at least 1 (0 because of log)
 Nrepl_data<-Nrepl_data[keep,]
 
 #Nrepl to data frame
 Nrepl_data<-as.data.frame(Nrepl_data) #evetually transpose
-
-#@@ Less genes kept for similar normality plots in rpkm (b73 tested)
 ```
 
 #### Plot CPM normalized data
-
-Create a function to plot the data
-```{r normPLotFunc}
-#@@ analyze CPM and RPKN and choose 1
-multiColLine<-function(data, location, color_var){ #gets the data table, the concrete column(tissue) and the color for the tissue
-  loc_var<-data[[location]] #get the tissue data
-  p<-ggplot(data, aes(x=loc_var))+geom_density(fill=color_var, color="black")+
-    xlab("")+ylab("")+theme_minimal() #plot a colored line graph for all genes of X tissue
-  return(p)
-}
-```
 
 Create the plot list
 ```{r CPMnormPlotListing}
 NormHistList<-list() #to store the plots
 
-for (i in 1:nrow(repl_meta[nn,])){
+for (i in 1:nrow(repl_meta[repl_selection,])){
   color_var<-colorList[i]
   loc<-colnames(repl_data)[i]
   
@@ -309,11 +292,11 @@ for (i in 1:nrow(repl_meta[nn,])){
 
 Joins the plot and legend to create a plot of the total normalized data distribution
 ```{r CPMnormPlot}
-plotTitle<-paste0(specie, " normalized data distribution using ", NormType)
+plotTitle<-paste0("Normalized data distribution using ", NormType)
 
-norm_Ptab<-arrangeGrob(grobs=NormHistList, ncol=ceiling(nrow(repl_meta[nn,])/6)) #creates a table that organizes the plots
+norm_Ptab<-arrangeGrob(grobs=NormHistList, ncol=ceiling(nrow(repl_meta[repl_selection,])/6)) #creates a table that organizes the plots
 
-#png(paste0("./DistrPlots/", specie, "_norm", NormType, "_distPlot.png"), width=1600, height=800) #B73_normCPM_distPlot
+#png(paste0("./DistrPlots/norm", NormType, "_distPlot.png"), width=1600, height=800) #normCPM_distPlot
 grid.arrange(norm_Ptab, legend_var, widths = c(10, 2.3), ncol=2, top=textGrob(plotTitle, gp=gpar(fontsize=20))) #plots the plot list and legend together
 #dev.off()
 ```
@@ -329,7 +312,6 @@ if (exists("length_vec")){ #if we have lengths
   dge <- DGEList(repl_data,genes=length_vec) #use edgeR for normalization
 
   dge <- calcNormFactors(dge)
-
   Nrepl_data <- rpkm(dge, log=TRUE)
 
   Nrepl_data<-as.data.frame(Nrepl_data)
@@ -342,16 +324,13 @@ if (exists("length_vec")){ #if we have lengths
 
 ```{r RPKMlExpRm}
 #Filter low expression genes
-keep<-rowSums(Nrepl_data>=0)>=0 #as most lowly expressed genes are slightly above 0(=1), so we filter starting at 1 rep and more than 5 total in samples
-keep<-apply(Nrepl_data, 1, max)>=0
+keep<-apply(Nrepl_data, 1, max)>=0 #keep genes where the counts for at least one replicate are of at least 1 (0 because of log)
 Nrepl_data<-Nrepl_data[keep,]
-
-#@@ Difference between 12 and 6 is important? -> it is we only do rpkm
 
 #Nrepl to data frame
 Nrepl_data<-as.data.frame(Nrepl_data) #evetually transpose
 
-#@@ More genes kept for similar normality plots than cpm (b73 tested)
+#More genes kept after normalization and filtering than cpm
 ```
 
 
@@ -359,10 +338,9 @@ Nrepl_data<-as.data.frame(Nrepl_data) #evetually transpose
 
 Create the plot list
 ```{r RPKMnormPlotListing}
-## Plotting the normalized data counts <-allPLot Title
 NormHistList<-list() #to store the plots
 
-for (i in 1:nrow(repl_meta[nn,])){
+for (i in 1:nrow(repl_meta[repl_selection,])){
   color_var<-colorList[i]
   loc<-colnames(repl_data)[i]
   
@@ -373,17 +351,20 @@ for (i in 1:nrow(repl_meta[nn,])){
 
 Joins the plot and legend to create a plot of the total normalized data distribution
 ```{r RPKMnormPlot}
-plotTitle<-paste0(specie, " normalized data distribution using ", NormType)
+plotTitle<-paste0("Normalized data distribution using ", NormType)
 
-norm_Ptab<-arrangeGrob(grobs=NormHistList, ncol=ceiling(nrow(repl_meta[nn,])/6)) #creates a table that organizes the plots
+norm_Ptab<-arrangeGrob(grobs=NormHistList, ncol=ceiling(nrow(repl_meta[repl_selection,])/6)) #creates a table that organizes the plots
 
-#png(paste0("./DistrPlots/", specie, "_norm", NormType, "_distPlot.png"), width=1600, height=800) #B73_normCPM_distPlot
+#png(paste0("./DistrPlots/norm", NormType, "_distPlot.png"), width=1600, height=800) #normRPKM_distPlot
 grid.arrange(norm_Ptab, legend_var, widths = c(10, 2.3), ncol=2,  top=textGrob(plotTitle, gp=gpar(fontsize=20))) #plots the plot list and legend together
 #dev.off()
 ```
 # PCA
 
+Run expression analysis for the data
+
 ```{r dtPrep}
+#@@
 repl_dvData<-as.data.frame(t(repl_data))
 Nrepl_dvData<-as.data.frame(t(Nrepl_data)) #Nrepl_data<-sweep(repl_data, 1, rowSums(repl_data), "/") #converts sample counts into relative frequencies for genes
 ```
@@ -393,23 +374,18 @@ Nrepl_dvData<-as.data.frame(t(Nrepl_data)) #Nrepl_data<-sweep(repl_data, 1, rowS
 set.seed(42)
 
 #Unscaled
-
 unscaled_pca <- prcomp(repl_dvData, scale=F)
-names(unscaled_pca)
 
 #Scaled
-
 scaled_pca <- prcomp(repl_dvData, scale=T)
-names(scaled_pca)
 
 #Normalized
+Nrepl_dvData_sc<-scale(Nrepl_dvData)
 
-Nrepl_dvData<-scale(Nrepl_dvData)
-
-N_pca<-prcomp(Nrepl_dvData, scale=T)
+N_pca<-prcomp(Nrepl_dvData_sc, scale=T)
 ```
 
-```{r}
+```{r pca}
 library(factoextra)
 
 #Raw
@@ -464,32 +440,30 @@ dataPlotter<-function(umap_data, metadata){
 ```{r rawUMAP}
 raw_umap_data<-umap(repl_dvData)
 
-plotly::ggplotly(dataPlotter(raw_umap_data, repl_meta)+ggtitle("Raw data Umap"))
+ggplotly(dataPlotter(raw_umap_data, repl_meta)+ggtitle("Raw data Umap"))
 ```
 
 ##Normalized Umap
 ```{r nUMAP}
 #Nrepl_data<-sweep(repl_data, 1, rowSums(repl_data), "/") #converts sample counts into relative frequencies for genes
 #Nrepl_UMAP<-as.data.frame(t(Nrepl_data))
-Nrepl_UMAP<-Nrepl_dvData
 
-Numap_data<-umap(Nrepl_UMAP)
+Numap_data<-umap(Nrepl_dvData)
 
 dataPlotter(Numap_data, repl_meta)+ggtitle("Normalized data Umap")
 ```
 
 ```{r sc_nUMAP}
-sc_Nrepl_UMAP<-scale(Nrepl_UMAP)
 
-sc_Numap_data<-umap(sc_Nrepl_UMAP)
+sc_Numap_data<-umap(Nrepl_dvData_sc)
 
-plotly::ggplotly(dataPlotter(sc_Numap_data, repl_meta)+ggtitle("Scaled data Umap"))
+ggplotly(dataPlotter(sc_Numap_data, repl_meta)+ggtitle("Scaled data Umap"))
 ```
 
 ```{r scUMAP_alt}
 umap_data<-sc_Numap_data
 
-plotly::ggplotly(ggplot(as.data.frame(umap_data$layout), aes(x=umap_data$layout[,1], y=umap_data$layout[,2], color=repl_meta$org_location))+
+ggplotly(ggplot(as.data.frame(umap_data$layout), aes(x=umap_data$layout[,1], y=umap_data$layout[,2], color=repl_meta$org_location))+
   geom_point(size=5)+
   scale_shape_manual(values = c(19, 1, 2, 15, 8))+
   #scale_color_manual(colorList)+
@@ -502,11 +476,13 @@ ggplot(as.data.frame(umap_data$layout), aes(x=umap_data$layout[,1], y=umap_data$
 
 ```
 ```{r}
-FinalUmap<-umap(sc_Nrepl_UMAP, n_neighbors=22, n_epochs=450, min_dist=0.1) #nneighbor: 29, 35 ##rework depending on normalization
+FinalUmap<-umap(Nrepl_dvData_sc, n_neighbors=29, n_epochs=450, min_dist=0.1) #nneighbor:22, 29, 35 ##rework depending on normalization
 #Modify min_dist as 0.1 fits better the data in this case
 
-plotly::ggplotly(dataPlotter(FinalUmap, repl_meta)+
+ggplotly(dataPlotter(FinalUmap, repl_meta)+
   ggtitle("Final UMAP with cleaned data"))
+
+
 ```
 
 
@@ -687,77 +663,22 @@ cor<-temp_cor
 Eigengenes summarize gene expression for a module(cluster of highly co-expressed genes(detected by similar gene expression patterns)) using PC1.
 Group up genes into 1 value
 ```{r EigenColors}
-#@@remove gray
 module_eigengenes <- ModNetwork$MEs
 
 #get number of genes for each module
 table(ModNetwork$colors)
 
-print(softPw)
-dim(Nrepl_data)
-
+dim(Nrepl_data) #get total number of genes from the dimensions
 ```
-
-```{r, eval=FALSE, purl=FALSE}
-gene_modules <- ModNetwork$colors
-blue_genes <- names(gene_modules)[gene_modules == "darkgreen"]
-Nrepl_data<-as.data.frame(Nrepl_data)
-blue_gene_expression <- as.data.frame(Nrepl_data[, colnames(Nrepl_data) %in% blue_genes])
-
-
-tgene<-data.frame(blue_gene_expression[,1:7])
-
-#Manual exploration to find genes
-Sim_genes<-data.frame(G1=blue_gene_expression$Zm00001eb085150, G2=blue_gene_expression$Zm00001eb085160, G3=blue_gene_expression$Zm00001eb104140, G4=blue_gene_expression$Zm00001eb104170)
-
-#png(paste0("./CorPlots/2gene_",specie, ".png"), width=1600, height=800)
-par(mar=c(8, 4, 4, 2))
-plot(Sim_genes$G4, type="l", col="darkblue", xlab="", ylab="Gene Expression", main=paste0("Co-expression comparison in ", specie), lwd=2, xaxt="n")
-lines(Sim_genes$G3, col="darkred", lwd=2)
-lines(Sim_genes$G1, col="darkgreen", lty=2, lwd=2)
-lines(Sim_genes$G2, col="purple", lty=2, lwd=2)
-legend(x="bottomright", legend=c("Zm00001eb104170", "Zm00001eb104140", "Zm00001eb085150", "Zm00001eb085160"), lty=c(1,1,2,2), col=c("darkblue", "darkred", "darkgreen", "purple"), y.intersp=1, cex=1.3, lwd=c(2,2,2,2))
-axis(1, at=1:nrow(blue_gene_expression), labels=FALSE)  #No label ticks
-text(x=1:nrow(blue_gene_expression), y=par("usr")[3] - 0.2,  #45 degree ticks
-     labels=rownames(blue_gene_expression), srt=45, adj=1, xpd=TRUE, cex=0.85)
-mtext("Replicates", side=1, line=6) #Name doesent fit
-#dev.off()
-
-library(reshape2)  # For data transformation
-
-blue_gene_expression<-tgene
-# Convert data to long format for ggplot
-blue_gene_expression$sample<-rownames(blue_gene_expression)
-blue_gene_expression_long <- melt(blue_gene_expression)
-colnames(blue_gene_expression_long) <- c("Sample", "Gene", "Expression")
-
-# Create the line plot
-ggGene<-ggplot(blue_gene_expression_long, aes(x = Sample, y = Expression, group = Gene, color = Gene)) +
-  geom_line(alpha = 0.7) +  # Plot lines for each gene
-  theme_minimal() +
-  labs(title = "Gene Expression in Smallest Module",
-       x = "Replicate",
-       y = "Expression Level",
-       color = "Gene") +
-  #theme(legend.position = "none")+
-  theme(axis.text.x = element_text(angle=45, vjust=1, hjust=1))
-
-show(ggGene)
-#ggsave(filename="./ModuleExp.png" ,ggGene)
-
-```
-
-
 
 ```{r EigenColorsPlot}
-#Plot the dendrogram and the module colors before and after merging underneath
+#Plot the module colors before and after merging underneath
 plotDendroAndColors(ModNetwork$dendrograms[[1]], cbind(ModNetwork$unmergedColors, ModNetwork$colors),
                     c("unmerged", "merged"),
                     dendroLabels = FALSE,
                     addGuide = TRUE,
                     hang= 0.03,
                     guideHang = 0.05)
-#https://www.nature.com/articles/s41588-024-02069-y
 ```
 
 ## Relate modules to traits
@@ -928,7 +849,8 @@ bin_metadata <- data.frame(
 
 rownames(bin_metadata)<-rownames(Nrepl_data)
 
-bin_metadata<-bin_metadata[,colSums(bin_metadata)>=1]#if any rtissue is not present in sample, it will be introduced in binarization, as a full 0 column, remove it again
+bin_metadata<-bin_metadata[,colSums(bin_metadata)>=1]
+#if any tissue is not present in sample, it will be introduced in binarization, as a full 0 column, this line removes it
 ```
 
 
@@ -953,8 +875,6 @@ head(heatmap.data)
 rownames(heatmap.data)<-heatmap.data$Row.names
 heatmap.data$Row.names<-NULL
 
-head(heatmap.data)
-
 plotTitle<-paste0("Correlation plot by species using ", NormType)
 #png(paste0("./CorPlots/", specie, "_", NormType, "_corplot.png"), width=1600, height=800) #B73_CPM_corplot
 CorLevelPlot(heatmap.data,
@@ -962,7 +882,7 @@ CorLevelPlot(heatmap.data,
              y = names(module_eigengenes),
              titleX="Traits", titleY="Modules", main=plotTitle,
              rotLabX = 45, rotTitleY = 90,
-             cexCorval = 0.4, cexLabY = 0.7, cexLabX = 0.7
+             cexCorval = 0, cexLabY = 0.7, cexLabX = 0.7
             )
 
 #dev.off()
@@ -982,8 +902,6 @@ head(heatmap.data)
 rownames(heatmap.data)<-heatmap.data$Row.names
 heatmap.data$Row.names<-NULL
 
-head(heatmap.data)
-
 plotTitle<-paste0("Correlation plot by tissue using ", NormType)
 #png(paste0("./CorPlots/", specie, "_", NormType, "_corplot.png"), width=1600, height=800) #B73_CPM_corplot
 CorLevelPlot(heatmap.data,
@@ -991,7 +909,7 @@ CorLevelPlot(heatmap.data,
              y = names(module_eigengenes),
              titleX="Traits", titleY="Modules", main=plotTitle,
              rotLabX = 45, rotTitleY = 90,
-             cexCorval = 0.4, cexLabY = 0.7, cexLabX = 0.7
+             cexCorval = 0, cexLabY = 0.7, cexLabX = 0.7
             )
 #dev.off()
 ```
